--- a/css/resume.css
+++ b/css/resume.css
@@ -72,7 +72,7 @@ p.lead {
 }
 
 .social-icons a:hover {
-  background-color: #BD5D38;
+  background-color: #03adfc;
 }
 
 .dev-icons {
@@ -80,7 +80,7 @@ p.lead {
 }
 
 .dev-icons .list-inline-item i:hover {
-  color: #BD5D38;
+  color: #03adfc;
 }
 
 #sideNav .navbar-nav .nav-item .nav-link {
@@ -101,7 +101,7 @@ p.lead {
     left: 0;
     display: flex;
     flex-direction: column;
-    width: 17rem;
+    width: 17rem
     height: 100vh;
   }
   #sideNav .navbar-brand {
@@ -160,15 +160,15 @@ section.resume-section .resume-item .resume-date {
 }
 
 .bg-primary {
-  background-color: #BD5D38 !important;
+  background-color: #03adfc !important;
 }
 
 .text-primary {
-  color: #BD5D38 !important;
+  color: #03adfc !important;
 }
 
 a {
-  color: #BD5D38;
+  color: #03adfc;
 }
 
 a:hover, a:focus, a:active {
