--- a/css/resume.css
+++ b/css/resume.css
@@ -101,7 +101,7 @@ p.lead {
     left: 0;
     display: flex;
     flex-direction: column;
-    width: 17rem
+    width: 17rem;
     height: 100vh;
   }
   #sideNav .navbar-brand {
